// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Account {
  id                 String  @id @default(cuid())
  userId             String
  type               String
  provider           String
  providerAccountId  String
  refresh_token      String?
  access_token       String?
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?
  session_state      String?
  oauth_token_secret String?
  oauth_token        String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

enum UserBadge {
  PRO
  TESTER
  DEFAULT
}

model User {
  id             String           @id @default(uuid())
  name           String           @unique
  description    String           @default("")
  email          String           @unique
  emailVerified  DateTime?
  image          String
  country        String           @default("")
  badge          UserBadge        @default(DEFAULT)
  followedBy     UserOnUser[]     @relation("followedBy")
  following      UserOnUser[]     @relation("following")
  keystrokes     Int              @default(0)
  wordsPerMinute WordsPerMinute[]
  charsPerMinute CharsPerMinute[]
  accuracy       TypingAccuracy[]
  testsCompleted Int              @default(0)
  wordsWritten   Int              @default(0)
  testPresets    TestPreset[]
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt
  accounts       Account[]
  sessions       Session[]
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model UserOnUser {
  id      String @id @default(uuid())
  child   User   @relation("following", fields: [childId], references: [id])
  childId String

  parent   User   @relation("followedBy", fields: [parentId], references: [id])
  parentId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model WordsPerMinute {
  id        String   @id @default(uuid())
  amount    Float    @default(0)
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CharsPerMinute {
  id        String   @id @default(uuid())
  amount    Float    @default(0)
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model TypingAccuracy {
  id        String   @id @default(uuid())
  amount    Float    @default(0)
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum TestType {
  WORDS
  TIME
}

enum TestLanguage {
  ENGLISH
  SPANISH
}

model TestPreset {
  id           String       @id @default(cuid())
  type         TestType     @default(WORDS)
  language     TestLanguage @default(ENGLISH)
  time         Int          @default(0)
  words        Int          @default(25)
  creatorImage String       @default("")
  user         User?        @relation(fields: [userId], references: [id])
  userId       String?
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
}
